--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
     "sass": "^1.58.3",
